Sad attempts on G API integration

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,5 +9,7 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="https://apis.google.com/js/api.js"></script>
+    <script type="module" src="/src/api/google-auth.js"></script>
   </body>
 </html>
